--- a/build.gradle
+++ b/build.gradle
@@ -71,3 +71,29 @@ publishing {
 	}
 
 }
+
+sourceSets {
+	main {
+		java {
+			srcDir "src/main"
+		}
+		resources {
+			srcDir "src/main/resources"
+		}
+	}
+}
+
+loom {
+	runs {
+		datagenClient {
+			client()
+			name "Data Generation"
+			vmArg "-Dfabric-api.datagen"
+			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/resources")}"
+
+			ideConfigGenerated = true
+			runDir "build/datagen"
+			source sourceSets.main
+		}
+	}
+}
