--- a/build.gradle
+++ b/build.gradle
@@ -72,3 +72,33 @@ publishing {
 
 }
 
+loom {
+
+
+	runs {
+		datagenClient {
+			client()
+			name "Data Generation"
+			vmArg "-Dfabric-api.datagen"
+			vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}"
+
+			ideConfigGenerated = true
+			runDir "build/datagen"
+			source sourceSets.main
+		}
+	}
+
+
+	accessWidenerPath = file("src/main/resources/xoverhaul.accesswidener")
+}
+
+sourceSets {
+	main {
+		java {
+			srcDir "src/main"
+		}
+		resources {
+			srcDir "src/generated/resources"
+		}
+	}
+}
