--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 	maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
+
+	maven { url 'https://maven.blamejared.com' }
 }
 
 dependencies {
@@ -30,6 +32,9 @@ dependencies {
 
 	// GeckoLib
 	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.18:3.0.38'
+
+	// Patchouli
+	modImplementation "vazkii.patchouli:Patchouli:1.18.2-67-FABRIC"
 
 }
 
