XiaoLib starting implementation and refactoring

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.1.12-hotspot
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
@@ -15,3 +14,4 @@ org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.1.12-hotspot
 
 # Dependencies
 	fabric_version = 0.59.0+1.18.2
+	xiaolib_version = 1.0.0+1.18.2
