--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -35,6 +35,9 @@ dependencies {
 
 	// Patchouli
 	modImplementation "vazkii.patchouli:Patchouli:1.18.2-67-FABRIC"
+
+	// XiaoLib
+	modImplementation(fileTree(dir: 'libs', include: ['xiaolib-1.0.0+1.18.2.jar']))
 
 }
 
